Fix Navbar on small desktop, Fix form input width, Fix table Css

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
     monospace;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .App {
     grid-template-columns: 200px repeat(3, 1fr);
   }
@@ -24,7 +24,7 @@ code {
 
 @layer components {
   .App {
-    @apply sm:grid sm:grid-cols-7 bg-slate-200 ml-auto mr-auto max-w-screen-2xl h-full;
+    @apply xl:grid bg-slate-200 ml-auto mr-auto max-w-screen-2xl h-full;
   }
   .form_block {
     @apply bg-white rounded-lg shadow py-4 mb-6 max-w-lg ml-auto mr-auto;
@@ -33,13 +33,13 @@ code {
     @apply flex flex-col align-middle text-left justify-center;
   }
   .block_elt {
-    @apply mx-auto w-5/6 md:w-auto;
+    @apply mx-auto w-5/6 md:w-7/12;
   }
   .button {
     @apply mt-6 bg-green-600 text-slate-50 font-bold py-2 px-4 rounded hover:bg-green-700 disabled:cursor-not-allowed disabled:bg-slate-400 transition;
   }
   .navbar {
-    @apply fixed sm:relative bottom-0 bg-slate-200 w-full sm:col-span-2 md:col-span-1 p-4 sm:p-2 pt-4 z-20;
+    @apply fixed sm:relative bottom-0  bg-slate-200 w-full sm:col-span-7 xl:col-span-1 sm:flex xl:block sm:justify-between p-4 sm:p-2 pt-4 z-20 h-20 sm:items-center;
   }
   .table-row:nth-child(2n) {
     @apply bg-gray-100;
@@ -49,6 +49,10 @@ code {
   }
   .pageBlock {
     @apply flex gap-3 items-center;
+  }
+  /* Select Plugin */
+  .Select {
+    @apply relative;
   }
 }
 
@@ -63,7 +67,7 @@ code {
     @apply font-bold text-xl text-gray-900 mb-4 mx-auto;
   }
   article {
-    @apply sm:col-span-5 md:col-span-3 p-4 pb-24 sm:p-0 sm:py-4  md:px-8 bg-slate-200;
+    @apply sm:col-span-5 md:col-span-3 p-4 pb-24 xl:p-0 xl:py-4  md:px-8 bg-slate-200;
   }
   input {
     @apply border-solid rounded-md mb-4 w-full md:w-64;
